--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/-millsboro.cadiahealthcare-08-22/">https://rank-fortress-digital-agency.github.io/-millsboro.cadiahealthcare-08-22/</a><br>
-                <a target="_bLank" href="http://millsboro.cadiahealthcare-08-22.s3-website.ap-south-1.amazonaws.com">http://millsboro.cadiahealthcare-08-22.s3-website.ap-south-1.amazonaws.com</a><br>
-                <a target="_bLank" href="https://unrivaled-selkie-b46f51.netlify.app/">https://unrivaled-selkie-b46f51.netlify.app/</a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/millsboro.cadiahealthcare-09-22/">https://rank-fortress-digital-agency.github.io/millsboro.cadiahealthcare-09-22/</a><br>
+                <a target="_bLank" href="http://millsboro.cadiahealthcare-09-22.s3-website-us-east-1.amazonaws.com">http://millsboro.cadiahealthcare-09-22.s3-website-us-east-1.amazonaws.com</a><br>
+                <a target="_bLank" href="https://dashing-rolypoly-e0d7ad.netlify.app/">https://dashing-rolypoly-e0d7ad.netlify.app/</a><br>
                 <a target="_bLank" href="https://sites.google.com/view/millsboro-cadiahealthcare/">https://sites.google.com/view/millsboro-cadiahealthcare/</a><br>
             </section>
 
